--- a/views/components/home.pug
+++ b/views/components/home.pug
@@ -1,3 +1,4 @@
+link(rel="stylesheet",href="/css/home.css")
 section#home
   .right-side
     h5  Hello, I'am
@@ -5,5 +6,3 @@ section#home
     p Junior Fullstack Web Developer
   .left-side
     img(src="/images/image0.png")
-
-
