--- a/views/components/home.pug
+++ b/views/components/home.pug
@@ -1,7 +1,7 @@
-section
+section.home
   .content
-    h2  Section One
-    p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-      | corporis ex neque facere aliquam, amet quae atque libero
-      | accusantium! Mollitia, omnis. Qui perspiciatis sit sunt veritatis
-      | nam saepe praesentium repellat!
+    h5  Hello, I'am
+    h1  Richie Zakaria
+    p   Junior Fullstack Web Developer
+  .right-side
+    img(src="/images/image0.png" draggable="false")
