--- a/views/components/about.pug
+++ b/views/components/about.pug
@@ -1,6 +1,6 @@
 section
   .content
-    h2  Section Two
+    h2  About Me
     p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
       | corporis ex neque facere aliquam, amet quae atque libero
       | accusantium! Mollitia, omnis. Qui perspiciatis sit sunt veritatis
