--- a/views/components/about.pug
+++ b/views/components/about.pug
@@ -1,4 +1,6 @@
-section
+section.about
+  .left-side
+    img(src="/images/image0.png")
   .content
     h2  About Me
     p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
