--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,12 +20,10 @@
   min-width: 100%;
   height: 100vh;
 }
-.container section:nth-child(3) {
+/*.container section:nth-child(3) {
   background: #d0eaff;
 }
-.container section:nth-child(4) {
-  background: #fce8f4;
-}
+*/
 .container section .content {
   max-width: 800px;
   padding: 40px;
@@ -46,6 +44,7 @@
   bottom: 0;
   right: 2em;
 }
+/* home */
 .home {
   display: flex;
   justify-content: space-between;
@@ -79,11 +78,10 @@
 .home .right-side > img {
   margin-left: 300px;
 }
-
+/* about */
 .about {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   position: relative;
 }
 .about .left-side {
@@ -92,6 +90,30 @@
   background-position: bottom right;
   background-size: cover;
   width: 101%;
+}
+.about img.circle {
+  position: absolute;
+  left: 77em;
+  top: 29em;
+}
+.about .content {
+  margin-top: 5em;
+}
+.about .content h2 {
+  font-weight: 600;
+  font-size: 2.5em !important;
+  text-align: right;
+}
+.about .content hr {
+  width: 27%;
+  float: right;
+  border: none;
+  height: 3px;
+  background: #000;
+}
+.about .content p {
+  text-align: right;
+  font-size: 1.2em !important;
 }
 @media (max-width: 991px) {
   .container {
