--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,13 +1,18 @@
 :root {
   --secondary-color: #22577a;
 }
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   scroll-behavior: smooth;
+}
+hr {
+  margin-top: 10px;
+  border: none;
+  height: 3px;
+  background: #000;
 }
 .container {
   position: fixed;
@@ -44,30 +49,32 @@
   bottom: 0;
   right: 2em;
 }
-/* home */
-.home {
+/* 
+    Start Home
+*/
+#home {
   display: flex;
   justify-content: space-between;
   position: relative;
 }
-.home > .content {
+#home > .content {
   text-align: left !important;
   position: absolute !important;
   margin: 15em 8em;
 }
-.home h1 {
+#home h1 {
   font-size: 3.5em;
   letter-spacing: 2px;
   font-weight: 500;
 }
-.home h5 {
+#home h5 {
   font-size: 1.5em;
   color: var(--secondary-color);
 }
-.home p {
+#home p {
   font-size: 1.2em !important;
 }
-.home .right-side {
+#home .right-side {
   background-image: url("/images/shape1.svg");
   background-repeat: no-repeat;
   background-position: top right;
@@ -75,46 +82,103 @@
   width: 100%;
   margin-left: 15em;
 }
-.home .right-side > img {
+#home .right-side > img {
   margin-left: 300px;
 }
-/* about */
-.about {
+/* 
+    End Home 
+    --------
+    Start About 
+*/
+#about {
   display: flex;
   justify-content: space-between;
   position: relative;
 }
-.about .left-side {
+#about .left-side {
   background-image: url("/images/shape2.svg");
   background-repeat: no-repeat;
   background-position: bottom right;
   background-size: cover;
   width: 101%;
 }
-.about img.circle {
+#about img.circle {
   position: absolute;
   left: 77em;
   top: 29em;
 }
-.about .content {
+#about .content {
   margin-top: 5em;
 }
-.about .content h2 {
+#about .content h2 {
   font-weight: 600;
   font-size: 2.5em !important;
   text-align: right;
 }
-.about .content hr {
+#about .content hr {
   width: 27%;
   float: right;
-  border: none;
-  height: 3px;
-  background: #000;
 }
-.about .content p {
+#about .content p {
   text-align: right;
   font-size: 1.2em !important;
 }
+/* 
+    End About 
+    --------
+    Start Service 
+*/
+#service {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+#service .heading {
+  margin-left: 7em;
+}
+#service .heading h2 {
+  font-weight: 600;
+  font-size: 2.5em !important;
+}
+#service .content {
+  display: flex;
+  flex-flow: row wrap;
+  max-width: 100% !important;
+  height: 100%;
+  gap: 20px;
+  margin-left: 10em;
+}
+#service .content > .item {
+  width: 23em;
+  height: 15em;
+  padding: 10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  text-align: left;
+  margin: 2em 10px;
+}
+#service .content > .item > img {
+  width: 50px;
+  border-radius: 50%;
+}
+#service .content > .item > h5 {
+  font-size: 1.4em;
+  font-weight: 500;
+  margin-top: 5px;
+}
+#service .content > .item > p {
+  font-size: 12px;
+}
+#service img.rectangle {
+  position: absolute;
+  top: -14em;
+  left: 270em;
+}
+/*
+    End Service 
+    --------
+    Start Responsive
+*/
 @media (max-width: 991px) {
   .container {
     position: absolute;
