add project and gh pages

--- a/views/components/projects.pug
+++ b/views/components/projects.pug
@@ -1,7 +1,8 @@
-section
+section#projects
   .content
-    h2  Section Four
-    p   Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-      | corporis ex neque facere aliquam, amet quae atque libero
-      | accusantium! Mollitia, omnis. Qui perspiciatis sit sunt veritatis
-      | nam saepe praesentium repellat!
+    h2  My Project
+    hr  
+  .project-box
+    .item
+      p hello
+  //- img(src="images/shape5.svg")
