--- a/public/css/style.css
+++ b/public/css/style.css
@@ -177,8 +177,33 @@ hr {
 /*
     End Service 
     --------
-    Start Responsive
+    Start Projects
 */
+#projects {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+#projects h2 {
+  font-weight: 600;
+  font-size: 2.5em !important;
+}
+.project-box {
+  width: 80em;
+  height: 20em;
+  padding: 10px 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 6px -1px,
+    rgba(0, 0, 0, 0.06) 0px 2px 4px -1px;
+  text-align: left;
+  margin: 2em 10px;
+  border-radius: 5em;
+  display: flex;
+  justify-content: space-between;
+}
+#projects img {
+  /* margin: 10em 0px 0em 60em; */
+}
 @media (max-width: 991px) {
   .container {
     position: absolute;
